@@ -15,6 +15,7 @@ BOX3D(0 0.1 -55,11 12 12)
 #3069|BOX(0 0,1 1)
 #3069|BOX(1 1,1 1)
 #3069|BOX(0 0,1 1)
+#2902|GeometryCollection[ZBS] with 3 elements   Polygon[ZS] with 1 rings    ring 0 has 5 points   Point[ZS]   MultiLineString[ZS] with 1 elements     LineString[ZS] with 2 points
 BoundingDiagonal1|SRID=4326;LINESTRING(999999986991104 999999986991104,1e+15 1e+15)
 BoundingDiagonal2|SRID=4326;LINESTRING(1e+15 1e+15,1e+15 1e+15)
 BoundingDiagonal3|SRID=4326;LINESTRING(999999986991104 999999986991104,1e+15 1e+15)
