@@ -3,6 +3,8 @@ PostGIS 3.0.0
 * Breaking Changes *
   - #3888, Raster support now available as a separate extension
     (Sandro Santilli)
+* New Features *
+  - #2902, postgis_geos_noop (Sandro Santilli)
 * Enhancements and fixes *
   - #4153, ST_Segmentize now splits segments proportionally (Darafei
     Praliaskouski).
